# tts-blendr

./: .env  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  _prompts.txt  _verify.txt  bootstrap.py  generate.py  main.py  pyproject.toml  requirements.txt  run.sh  script.txt  tts.py
data/: .gitkeep
scripts/: install.sh
src/voiceblend_tui/: __init__.py  app.py
src/voiceblend_tui/core/: __init__.py  blender.py  config.py  file_utils.py  settings.py
src/voiceblend_tui/services/: audio_service.py  file_service.py
src/voiceblend_tui/ui/: __init__.py
src/voiceblend_tui/widgets/: __init__.py  blend_controls.py  blend_ratio.py  file_input.py  file_picker.py  file_picker_modal.py  footer.py  header.py  message_log.py  output_filename.py  voice_selection.py
venv311/: pyvenv.cfg
voices/: .gitkeep
