[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceblend-tui"
version = "0.1.0"
description = "A Textual-based TUI application for voice blending"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

